--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format:fix": "prettier --write . && eslint . --fix"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.95.3",
     "lucide-react": "^0.344.0",
     "next": "^13.4.7",
     "react": "^18.2.0",
